# agentic-sandbox

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  agentic-sandbox  agentic-vm  agentic_vm.py  pyproject.toml
agentic_sandbox/: backend.py  consts.py  main.py  mkosi_backend.py  podman_backend.py  spinner.py
agentic_sandbox/mkosi/: mkosi.postinst
agentic_sandbox/mkosi/mkosi.extra/usr/lib/sysusers.d/: agentic-sandbox.conf
agentic_sandbox/mkosi/mkosi.extra/usr/lib/tmpfiles.d/: agentic-sandbox.conf
agentic_sandbox/mkosi/mkosi.images/initrd/: mkosi.conf
agentic_sandbox/podman/: Containerfile.in
agentic_vm/: __init__.py  backend.py  consts.py  main.py  mkosi_backend.py  podman_backend.py
agentic_vm/podman/: Containerfile.in
mkosi/: mkosi.conf.in  mkosi.postinst
tests/: test_agentic_vm.py  test_identity.py  test_main.py  test_podman_backend.py  test_stop.py  test_vm_mounts.py  test_workspace.py  test_wrapper.py
