[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-vm"
version = "0.1.0"
description = "Small Python wrapper around mkosi for isolating LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "agentic-vm contributors" }]

[project.scripts]
agentic-vm = "agentic_vm.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agentic_vm*"]
