[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sandbox"
version = "0.1.0"
description = "Small Python wrapper around mkosi for isolating LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Eric Long" }]

[project.scripts]
agentic-sandbox = "agentic_sandbox.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agentic_sandbox*"]
